--- a/main.templ
+++ b/main.templ
@@ -5,7 +5,11 @@ import "fmt"
 templ Header(){
   <header class="d-flex justify-content-center border-bottom">
     <div class="d-flex m-3">
-      <h2>Create Gitlab Service User</h2>
+      <h2>
+        Gitlab
+        <i class="bi bi-gitlab"></i>
+        ServiceUser Management
+      </h2>
     </div>
   </header>
 }
@@ -21,14 +25,23 @@ templ Footer(year int){
   </footer>
 }
 
-templ Content(){
-  <div class="d-flex justify-content-center">
-    <form class="w-25 m-2 p-1" action="/serviceaccount" method="post">
-      <input type="text" class="form-control m-2" name="glUrl" placeholder="Gitlab Url e.g. https://gitlab.example.com" required>
+templ Create(){
+  <div id="content" class="d-flex justify-content-center">
+    <form class="w-25 m-2 p-1" hx-post="/serviceaccount" hx-target="#content">
+      <input type="url" class="form-control m-2" name="glUrl" placeholder="Gitlab Url e.g. https://gitlab.example.com" required>
       <input type="password" class="form-control m-2" name="glToken" placeholder="Gitlab Token e.g. glpat-..." required>
-      <input type="text" class="form-control m-2" name="saName" placeholder="Service Account Name" required>
-      <input type="text" class="form-control m-2" name="saDisplayName" placeholder="Service Account Display Name" required>
+      <input type="text" class="form-control m-2" name="saName" placeholder="Service Account Name">
+      <input type="text" class="form-control m-2" name="saDisplayName" placeholder="Service Account Display Name">
       <input class="btn btn-primary rounded-pill m-2" type="submit" value="Create">
+    </form>
+  </div>
+}
+
+templ Output(output string){
+  <div id="content" class="d-flex row justify-content-center w-25 m-2 p-1">
+    { output }
+    <form action="">
+      <input class="btn btn-primary rounded-pill m-2" type="submit" value="Back to Start">
     </form>
   </div>
 }
@@ -40,12 +53,13 @@ templ Site(siteName string, year int){
       <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+      <script src="https://unpkg.com/htmx.org@1.9.12/dist/htmx.js" integrity="sha384-qbtR4rS9RrUMECUWDWM2+YGgN3U4V4ZncZ0BvUcg9FGct0jqXz3PUdVpU1p0yrXS" crossorigin="anonymous"></script>
       <title>{ siteName }</title>
   </head>
   <body>
     <div class="container-fluid text-center">
       @Header()
-      @Content()
+      @Create()
       @Footer(year)
     </div>
   </body>
