--- a/main.templ
+++ b/main.templ
@@ -3,15 +3,27 @@ package main
 import "fmt"
 
 templ Header(){
-  <header class="d-flex justify-content-center border-bottom">
-    <div class="d-flex m-3">
-      <h2>
-        Gitlab
-        <i class="bi bi-gitlab"></i>
-        ServiceUser Management
-      </h2>
-    </div>
+  <header class="d-flex justify-content-center m-2 p-1 border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#"><i class="bi bi-gitlab"></i></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <div class="nav-item nav-link" hx-get="/home" hx-target="#content" hx-swap="outerHTML">Home</div>
+          <div class="nav-item nav-link" hx-get="/serviceaccount" hx-target="#content" hx-swap="outerHTML">ServiceAccounts</div>
+          <div class="nav-item nav-link" hx-get="/token" hx-target="#content" hx-swap="outerHTML">PersonalAccessTokens</div>
+        </div>
+      </div>
+    </nav>
   </header>
+}
+
+templ Home(){
+  <div id="content" class="d-flex justify-content-center m-2 p-1">
+    Simple SPA to have an UI for gitlab serviceaccount management.
+  </div>
 }
 
 templ Footer(year int){
@@ -25,7 +37,7 @@ templ Footer(year int){
   </footer>
 }
 
-templ Create(){
+templ CreateServiceUser(){
   <div id="content" class="d-flex justify-content-center">
     <form class="w-25 m-2 p-1" hx-post="/serviceaccount" hx-target="#content">
       <input type="url" class="form-control m-2" name="glUrl" placeholder="Gitlab Url e.g. https://gitlab.example.com" required>
@@ -37,16 +49,49 @@ templ Create(){
   </div>
 }
 
+templ CreatePersonalAccessToken(Scopes []string){
+  <div id="content" class="d-flex justify-content-center">
+    <form class="w-25 m-2 p-1" hx-post="/token" hx-target="#content">
+      <input type="url" class="form-control m-2" name="glUrl" placeholder="Gitlab Url e.g. https://gitlab.example.com" required>
+      <input type="password" class="form-control m-2" name="glToken" placeholder="Gitlab Token e.g. glpat-..." required>
+      <input type="text" class="form-control m-2" name="UserID" placeholder="ID of the user" required>
+      <input type="text" class="form-control m-2" name="Name" placeholder="Name of the personal access token" required>
+      <input type="date" class="form-control m-2" name="ExpiresAt" placeholder="Expiration date of the access token in ISO format (YYYY-MM-DD)" required>
+      <select class="form-select m-2 p-1" name="Scopes" id="scopes" multiple>
+        for _, s :=range Scopes {
+          <option value={s}>{s}</option>
+        }
+      </select>
+      <input class="btn btn-primary rounded-pill m-2" type="submit" value="Create">
+    </form>
+  </div>
+}
+
 templ Output(output string){
-  <div id="content" class="d-flex row justify-content-center w-25 m-2 p-1">
-    { output }
-    <form action="">
+  <div id="content" class="d-flex row justify-content-center w-50 m-2 p-1">
+    <div class="col">
+      { output }
+    </div>
+    <form hx-get="/home" hx-target="#content">
       <input class="btn btn-primary rounded-pill m-2" type="submit" value="Back to Start">
     </form>
   </div>
 }
 
-templ Site(siteName string, year int){
+templ OutputToken(token string){
+  <div id="content" class="d-flex row justify-content-center w-25 m-2 p-1">
+    <div class="col">
+      <input id="pass" type="password" class="form-control m-2" name="pat" value={ token }>
+      <input type="checkbox" class="form-control m-2" onclick="reveal()"><i class="bi bi-eye"></i>
+      Make sure you save it - you won't be able to access it again.
+    </div>
+    <form hx-get="/home" hx-target="#content">
+      <input class="btn btn-primary rounded-pill m-2" type="submit" value="Back to Start">
+    </form>
+  </div>
+}
+
+templ Site(year int){
   <!doctype html>
   <html lang="en" data-bs-theme="dark">
   <head>
@@ -54,12 +99,22 @@ templ Site(siteName string, year int){
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
       <script src="https://unpkg.com/htmx.org@1.9.12/dist/htmx.js" integrity="sha384-qbtR4rS9RrUMECUWDWM2+YGgN3U4V4ZncZ0BvUcg9FGct0jqXz3PUdVpU1p0yrXS" crossorigin="anonymous"></script>
-      <title>{ siteName }</title>
+      <title>Gitlab ServiceAccount Management SPA</title>
+      <script>
+        function reveal() {
+          var x = document.getElementById("pass");
+          if (x.type === "password") {
+            x.type = "text";
+          } else {
+            x.type = "password";
+          }
+        }
+      </script>
   </head>
   <body>
     <div class="container-fluid text-center">
       @Header()
-      @Create()
+      @Home()
       @Footer(year)
     </div>
   </body>
