--- a/main.templ
+++ b/main.templ
@@ -118,8 +118,8 @@ templ OutputToken(token string){
   <div id="content" class="d-flex justify-content-center">
     <div class="w-25 m-2 p-1">
       <div class="input-group m-2">
-        <input id="pass" type="password" class="form-control" name="pat" value={ token } aria-label="pat" aria-describedby="pat-addon">
-        <span class="input-group-text" id="pat-addon" onclick="reveal()"><i class="bi bi-eye"></i></span>
+        <input id="pass" type="password" class="form-control" name="pat" value={ token } aria-label="pat">
+        <span class="input-group-text" _="on click if #pass's [@type] is 'password' set #pass's [@type] to 'text' else set #pass's [@type] to 'password'"><i class="bi bi-eye"></i></span>
       </div>
       Make sure you save it - you won't be able to access it again.
       <form hx-get="/home" hx-target="#content" hx-swap="outerHTML">
@@ -137,17 +137,8 @@ templ Site(year int){
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
       <script src="https://unpkg.com/htmx.org@1.9.12/dist/htmx.js" integrity="sha384-qbtR4rS9RrUMECUWDWM2+YGgN3U4V4ZncZ0BvUcg9FGct0jqXz3PUdVpU1p0yrXS" crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
       <title>Gitlab ServiceAccount Management SPA</title>
-      <script>
-        function reveal() {
-          var x = document.getElementById("pass");
-          if (x.type === "password") {
-            x.type = "text";
-          } else {
-            x.type = "password";
-          }
-        }
-      </script>
   </head>
   <body>
     <div class="container-fluid text-center">
